--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   <body class="bg-[#111827]">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+   <script type="module" src="/index.tsx"></script>
+
 
   </body>
 </html>
